--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cycle Companion</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght,wdth@8..112,100..1000,25..151&display=swap">
+</head>
+<body>
+    <header>
+        <h1>Cycle Companion</h1>
+    </header>
+
+    <main>
+        <section class="calendar-section">
+            <h2>Monthly Calendar</h2>
+            <div id="calendar-container"></div>
+        </section>
+
+        <section class="tips-section">
+            <h2>Tips & Information</h2>
+            <div class="tip-card">
+                <h3>What is the Luteal Phase?</h3>
+                <p>The luteal phase is the time between ovulation and the start of the next period. During this time, the body prepares for a potential pregnancy.</p>
+            </div>
+            <div class="tip-card">
+                <h3>How to Be Supportive</h3>
+                <p>Simple gestures like offering to cook a meal, running an errand, or just being a good listener can make a huge difference.</p>
+            </div>
+        </section>
+    </main>
+</body>
+</html>
 
